--- a/views/providers.handlebars
+++ b/views/providers.handlebars
@@ -1,19 +1,19 @@
-{{> header/navbar-client}}
+{{> header/navbar-provider}}
 	
 	<div class="container">
 		<div class="jumbotron">
 		  <h1 class="display-4">Welcome to Pencil Me In!</h1>
 		  <div class="dropdown">
 		  <button class="btn btn-secondary dropdown-toggle btn-lg" type="button" id="client-status" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			Are you a New or Existing Client?
+			Are you a New or Existing Provider?
 		  </button>
 		  <div class="dropdown-menu" aria-labelledby="client-status">
-			<button class="dropdown-item" type="button" id="new-client">I am a New Client</button>
-			<button class="dropdown-item" type="button" id="existing-client">I am an Existing Client</button>
+			<button class="dropdown-item" type="button" id="new-client">I am a New Provider</button>
+			<button class="dropdown-item" type="button" id="existing-client">I am an Existing Provider</button>
 		  </div>
 		</div>
 		  <hr class="my-4">
-		  <div id="client-ui">
+		  <div id="provider-ui">
 			
 		  </div>
 		</div>
