--- a/views/providers.handlebars
+++ b/views/providers.handlebars
@@ -8,8 +8,8 @@
 			Are you a New or Existing Provider?
 		  </button>
 		  <div class="dropdown-menu" aria-labelledby="client-status">
-			<button class="dropdown-item" type="button" id="new-client">I am a New Provider</button>
-			<button class="dropdown-item" type="button" id="existing-client">I am an Existing Provider</button>
+			<button class="dropdown-item" type="button" id="new-provider">I am a New Provider</button>
+			<button class="dropdown-item" type="button" id="existing-provider">I am an Existing Provider</button>
 		  </div>
 		</div>
 		  <hr class="my-4">
