some coloring, styling

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,6 +11,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 		<link rel='stylesheet' href='/styles/fullcalendar.css' />
 		<link rel="stylesheet" type="text/css" href="/styles/styles.css">
 	</head>
@@ -18,15 +19,12 @@
 <body>
 	{{{body}}}
 
-<<<<<<< HEAD
+
 	<script src="/js/index.js"></script>
 	<script src="/js/fullcalendar.js"></script>
 	<script src="/js/app.js"></script>
 	<script src="/js/provider.js"></script>
-=======
-	<script src="js/index.js"></script>
-	<script src="js/app.js"></script>
->>>>>>> bfa49b16e0c7f43fbe28c71dc1a19517b9b54c01
+
 </body>
 
 </html>
