--- a/views/provider.handlebars
+++ b/views/provider.handlebars
@@ -1,11 +1,11 @@
-{{> header/navbar-provider}}
+{{> header/navbar-client}}
 	
 	<div class="container">
 		<div class="jumbotron">
-		  <h1 class="display-4">Welcome to Pencil Me In!</h1>
+		  <h1 class="display-4 d-flex justify-content-center">Welcome to <i class="fas fa-pencil-alt"></i> Pencil Me In!</h1>
 		  
 		  <hr class="my-4">
-		  <div id="provider-ui">
+		  <div id="client-ui">
 			
 		  </div>
           <div id="providerid">{{id}}</div>
