--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -3,11 +3,15 @@ html, body {
   padding: 0;
   font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
   font-size: 14px;
+
 }
 
 #calendar {
-  max-width: 900px;
-  margin: 40px auto;
+  max-width: 56.25rem;
+  margin: 2rem auto;
+  padding: 1rem;
+  background-color: #fff;
+  border-radius: 5px;
 }
 
 nav.navbar {
@@ -20,6 +24,15 @@ a.navbar-brand {
 	font-weight: 700;
 }
 
+.navbar-light {
+	background-color: #D4D6B9!important;
+}
+
+.navbar-light .navbar-brand {
+	color: #383B53;
+	
+}
+
 .navbar-text {
 	margin-right:4rem;
 }
@@ -30,4 +43,17 @@ a.navbar-brand {
 
 .form-check-inline {
 	margin-right: .2rem;
+}
+
+#btn-secondary {
+	background-color: #66717E;
+}
+
+.jumbotron {
+	color: #383B53;
+	background-color: #D4D6B9;
+}
+
+.fas {
+	color: #32213A;
 }
