--- a/views/providers.handlebars
+++ b/views/providers.handlebars
@@ -2,8 +2,8 @@
 	
 	<div class="container">
 		<div class="jumbotron">
-		  <h1 class="display-4">Welcome to Pencil Me In!</h1>
-		  <div class="dropdown">
+		  <h1 class="display-4 d-flex justify-content-center">Welcome to <i class="fas fa-pencil-alt"></i> Pencil Me In!</h1>
+		  <div class="dropdown d-flex justify-content-center">
 		  <button class="btn btn-secondary dropdown-toggle btn-lg" type="button" id="client-status" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			Are you a New or Existing Provider?
 		  </button>
@@ -19,5 +19,3 @@
 		</div>
 	</div>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
