alt colors and a background image

--- a/views/providers.handlebars
+++ b/views/providers.handlebars
@@ -2,7 +2,7 @@
 	
 	<div class="container">
 		<div class="jumbotron">
-		  <h1 class="display-4 d-flex justify-content-center">Welcome to <i class="fas fa-pencil-alt"></i> Pencil Me In!</h1>
+		  <h1 class="display-4 d-flex justify-content-center">Welcome to&nbsp;<i class="fas fa-pencil-alt"></i>&nbsp;Pencil Me In!</h1>
 		  <div class="dropdown d-flex justify-content-center">
 		  <button class="btn btn-secondary dropdown-toggle btn-lg" type="button" id="client-status" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			Are you a New or Existing Provider?
