--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -3,7 +3,8 @@ html, body {
   padding: 0;
   font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
   font-size: 14px;
-
+	background-image: url("../img/jessica-fadel-1062020-unsplash.jpg");
+	background-size: cover;
 }
 
 #calendar {
@@ -25,11 +26,11 @@ a.navbar-brand {
 }
 
 .navbar-light {
-	background-color: #D4D6B9!important;
+	background-color: #66717E!important;
 }
 
 .navbar-light .navbar-brand {
-	color: #383B53;
+	color: #DFF2D8;
 	
 }
 
@@ -45,13 +46,19 @@ a.navbar-brand {
 	margin-right: .2rem;
 }
 
-#btn-secondary {
-	background-color: #66717E;
+.btn-secondary {
+	background-color: #DFF2D8;
+	color: #32213A;
+}
+
+.btn-secondary:hover {
+	background-color: #eFF3D8;
+	color: #32213A;
 }
 
 .jumbotron {
-	color: #383B53;
-	background-color: #D4D6B9;
+	color: #DFF2D8;
+	background-color: #66717E;
 }
 
 .fas {
