--- a/views/partials/header/navbar-provider.handlebars
+++ b/views/partials/header/navbar-provider.handlebars
@@ -1,6 +1,6 @@
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-		<a class="navbar-brand" href="#"><i class="fas fa-pencil-alt"></i>&nbsp;&nbsp;Pencil Me In Providers</a>
+		<a class="navbar-brand" href="#"><i class="fas fa-pencil-alt"></i>&nbsp;Pencil Me In Providers</a>
 		 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		  </button>
