--- a/views/partials/header/navbar-client.handlebars
+++ b/views/partials/header/navbar-client.handlebars
@@ -1,14 +1,16 @@
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-
-		<a class="navbar-brand" href="/"><i class="fas fa-pencil-alt"></i>&nbsp;Pencil Me In</a>
-		 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		  </button>
-		  <div class="collapse navbar-collapse" id="navbarText">
-			<ul class="navbar-nav mr-auto">
-
-			</ul>
-			<a href="/providers" class="navbar-text">
-			  Providers
-			</a>
-	</nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/"><i class="fas fa-pencil-alt"></i>&nbsp;Pencil Me In</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item  active">
+        <a class="nav-link" href="/">Clients<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/providers">Providers</a>
+      </li>
+    </ul>
+  </div>
+</nav>
