--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,22 +3,29 @@
 	<div class="container">
 		<div class="jumbotron">
 		  <h1 class="display-4 d-flex justify-content-center">Welcome to <i class="fas fa-pencil-alt"></i> Pencil Me In!</h1>
-		  <div class="dropdown d-flex justify-content-center">
-		  <button class="btn btn-secondary dropdown-toggle btn-lg" type="button" id="client-status" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			Are you a New or Existing Client?
-		  </button>
-		  <div class="dropdown-menu" aria-labelledby="client-status">
-			<button class="dropdown-item" type="button" id="new-client">I am a New Client</button>
-			<button class="dropdown-item" type="button" id="existing-client">I am an Existing Client</button>
+		  <div class="loginbox">
+		  <div class="thing" id="clientlogin">
+			<p class="text-center" ><a href="#" >Client</a></p>
 		  </div>
+		  <div class="thing inactive" id="providerlogin">
+			<p class="text-center"><a href="#" >Provider</a></p>
+		  </div>
+		  </div>
+		  <div class="card" >
+		  <div class="card-body">
+			<form>
+			  <div class="form-group">
+				<label for="exampleInputEmail1">Email address</label>
+				<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+			  </div>
+			  <div class="form-group">
+				<label for="exampleInputPassword1">Password</label>
+				<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+			  </div>
+			  <button type="button" class="btn btn-secondary" id="login">Log in</button>
+			</form>
+		  
 		</div>
-		  <hr class="my-4">
-		  <div id="client-ui">
-			
-		  </div>
-		</div>
-		<div id="client-new">
-			
-		  </div>
+		  
 	</div>
 
