--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,7 +22,7 @@
 				<label for="exampleInputPassword1">Password</label>
 				<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
 			  </div>
-			  <button type="button" class="btn btn-secondary" id="login">Log in</button>
+			  <button type="button" class="btn btn-secondary" id="loginClient">Log in</button>
 			</form>
 		  
 		</div>
