added new client and provider links to app.js

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,7 +24,8 @@
 			  </div>
 			  <button type="button" class="btn btn-secondary" id="loginClient">Log in</button>
 			</form>
-		  
+		 <div id="newUser"><a href="#">New client click here</a></div> 
+
 		</div>
 		  
 	</div>
