added log out button

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,7 +15,7 @@
 		  <div class="card-body">
 			<form>
 			  <div class="form-group">
-				<label for="exampleInputEmail1">Email address</label>
+				<label for="exampleInputEmail1">Client email address</label>
 				<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
 			  </div>
 			  <div class="form-group">
@@ -24,8 +24,12 @@
 			  </div>
 			  <button type="button" class="btn btn-secondary" id="loginClient">Log in</button>
 			</form>
+		  </div>
+		  
 		  
 		</div>
+		  
+		  <div id="newUser"></div>
 		  
 	</div>
 
