--- a/views/provider.handlebars
+++ b/views/provider.handlebars
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="saveAppt">Save appointment</button>
+                    <button type="button" class="btn btn-secondary" id="saveAppt">Save appointment</button>
                 </div>
             </div>
         </div>
