--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -52,6 +52,10 @@ a.navbar-brand {
 	margin-right: .2rem;
 }
 
+.form-inline {
+	padding: 0;
+}
+
 .btn-secondary {
 	background-color: #DFF2D8;
 	color: #32213A;
