--- a/views/partials/header/navbar-client.handlebars
+++ b/views/partials/header/navbar-client.handlebars
@@ -1,5 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="/"><i class="fas fa-pencil-alt"></i>&nbsp;Pencil Me In</a>
 
-  </div>
+  <form class="form-inline">
+    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Log Out</button>
+  </form>
 </nav>
