--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,6 +3,7 @@
 	<div class="container">
 		<div class="jumbotron">
 		  <h1 class="display-4 d-flex justify-content-center">Welcome to <i class="fas fa-pencil-alt"></i> Pencil Me In!</h1>
+		  <div class="wholeLogin">
 		  <div class="loginbox">
 		  <div class="thing" id="clientlogin">
 			<p class="text-center" ><a href="#" >Client</a></p>
@@ -13,10 +14,10 @@
 		  </div>
 		  <div class="card" >
 		  <div class="card-body">
-			<form>
+			<form class="loginForm">
 			  <div class="form-group">
-				<label for="exampleInputEmail1">Client email address</label>
-				<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+				<label for="inputEmail1" id="emailLogin">Client email</label>
+				<input type="email" class="form-control" id="inputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
 			  </div>
 			  <div class="form-group">
 				<label for="exampleInputPassword1">Password</label>
@@ -24,16 +25,16 @@
 			  </div>
 			  <button type="button" class="btn btn-secondary" id="loginClient">Log in</button>
 			</form>
-
+			<div id="anchor" >
+				<div id="newClient">
+					<a href="#">New client click here&nbsp;<i class="fa fa-list-alt" aria-hidden="true"></i></a>
+				</div>
+			</div>
 		  </div>
-		  
-		  
-
-		 <div id="newUser"><a href="#">New client click here</a></div> 
-
 
 		</div>
-		  
+		</div>
+		  </div>
 		  <div id="newUser"></div>
 		  
 	</div>
