--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,7 +23,9 @@
 				<label for="exampleInputPassword1">Password</label>
 				<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
 			  </div>
+				<div id="rendButton">
 			  <button type="button" class="btn btn-secondary" id="loginClient">Log in</button>
+			</div>
 			</form>
 			<div id="anchor" >
 				<div id="newClient">
