--- a/views/partials/header/navbar-client.handlebars
+++ b/views/partials/header/navbar-client.handlebars
@@ -2,6 +2,6 @@
   <a class="navbar-brand" href="/"><i class="fas fa-pencil-alt"></i>&nbsp;Pencil Me In</a>
 
   <form class="form-inline">
-    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Log Out</button>
+    <button class="btn btn-secondary my-2 my-sm-0" id="logout" type="submit">Log Out</button>
   </form>
 </nav>
