--- a/views/provider.handlebars
+++ b/views/provider.handlebars
@@ -13,6 +13,7 @@
     </div>
     <div class="row">
         <div class="col-md-12">
+            <div><h2 id="calProvider" class="text-center font-weight-bold"></h2></div>
             <div id="calendar">
 
             </div>
