added proper clientId to new events

--- a/views/provider.handlebars
+++ b/views/provider.handlebars
@@ -29,9 +29,9 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <strong><p id="timeslot"></p></strong>
+                    <strong><p id="timeslot" class="mb-2"></p></strong>
                     <div class="form-group">
-                        <input class="form-control" id="apptText" type="text" placeholder="Appointment details">
+                        <input class="form-control mb-2" id="apptText" type="text" placeholder="Appointment details">
                         <label for="duration">Duration (mins)</label>
                         <select class="form-control" id="duration">
                             <option>30</option>
